# commander-bench

./: .gitignore  AGENTS.md  Makefile  conductor.json  mcp-tools.json  pom.xml  readme.md
.github/: dependabot.yml
Mage.Client.Headless/: pom.xml
Mage.Client.Streaming/: pom.xml
configs/: commander-1v3.json  commander-dumb.json  commander-gauntlet.json  frontier.json  gauntlet.json  legacy-dumb.json  legacy-gauntlet.json  legacy-llm.json  llm.json  llm4.json  modern-dumb.json  modern-gauntlet.json  modern-staller.json  staller.json  standard-dumb.json  standard-gauntlet.json  standard-staller.json
doc/: architecture.md  investigating-game-logs.md  issues.md  logging.md  screenshots.md  streaming-overlay.md  youtube.md
issues/: api-key-403-no-autopilot.json  audit-mcp-token-efficiency.json  auto-mana-pool-infinite-loop.json  auto-mana-silent-spell-cancel.json  auto-pass-infinite-loops.json  blocker-target-empty-choices.json  bluffing-support.json  brainstorm-new-mcp-features.json  card-hover-popup-viewport-clipping.json  chat-message-spam-no-dedup.json  chat-messages-not-delivered.json  (+87 more)
puppeteer/: ai-harness-config.json  ai-harness-legacy-1v1-config.json  ai-harness-legacy-dumb-config.json  ai-harness-legacy-llm-config.json  ai-harness-llm-config.json  ai-harness-llm4-config.json  ai-harness-personality-config.json  models.json  personalities.json  presets.json  prompts.json  pyproject.toml  toolsets.json
puppeteer/src/puppeteer/: __main__.py  auto_pass.py  chatterbox.py  config.py  deck_choice.py  game_log.py  harness.py  harness_epoch.py  leaderboard.py  llm_cost.py  orchestrator.py  pilot.py  port.py  process_manager.py  sleepwalker.py
puppeteer/tests/: test_auto_pass.py  test_blunder_annotator.py  test_commentary.py  test_config.py  test_deck_choice.py  test_game_log.py  test_harness.py  test_harness_epoch.py  test_leaderboard.py  test_llm_cost.py  test_mana_tapping.py  test_orchestrator.py  test_pilot.py  test_pilot_context.py  test_port.py  test_process_manager.py  test_scripts.py  test_xml_config.py  test_youtube.py
(+175 files in other folders)
